documentation ans state filter
